@@ -5,4 +5,8 @@ libc_hidden_proto (pmap_getport)
 libc_hidden_proto (pmap_set)
 libc_hidden_proto (pmap_unset)
 
+/* Defined in pm_getport.c.  */
+extern int __get_socket (struct sockaddr_in *saddr)
+     attribute_hidden internal_function;
+
 #endif
